--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "develop": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
   "author": "",
@@ -19,6 +20,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.3.5"
   }
 }
